--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -215,6 +215,10 @@
   .scrolling-text {
       font-size: 16px;
   }
+  .video-section{
+    width: 100%;
+    height: 40vh;
+  }
 }
 
 .products-section, .review-section, .footer-section {
