--- a/frontend/src/pages/ProductsPage.css
+++ b/frontend/src/pages/ProductsPage.css
@@ -56,7 +56,7 @@
     left: 0;
     width: 100%;
     padding: 10px;
-    color: #FFF;
+    color: #000;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
