--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -229,7 +229,14 @@ padding: 0;
 .chatwithus a{
   position: fixed;
 }
+.chatwithus img{
+  width: 150px;
+  position: absolute;
+  right: 100px;
+}
 .chatwithus a {
+  width: 300px;
+  height: 100px;
   color: white;
   align-items: center;
   text-decoration: none;
@@ -250,17 +257,3 @@ padding: 0;
   right: 0;
 }
 
-.whatsapp-link {
-  display: flex;
-  align-items: center;
-  background-color: #25d366;
-  color: white;
-  padding: 10px 20px;
-  border-radius: 30px;
-  text-decoration: none;
-}
-
-.whatsapp-icon {
-  margin-left: 10px;
-  font-size: 24px;
-}
