--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -58,8 +58,9 @@
   width: 100%;
 }
 .offerposter img{
+  margin-top: 17px;
   width: 100%;
-  height: 90vh;
+  height: 80vh;
 }
 /* Footer section styling */
 .footer-section {
@@ -220,6 +221,11 @@
       font-size: 16px;
   }
   .video-section{
+    width: 100%;
+    height: 40vh;
+  }
+  .offerposter img{
+    margin-top: 15px;
     width: 100%;
     height: 40vh;
   }
