--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -7,6 +7,26 @@
   height: 100vh;
   overflow: hidden;
 }
+.show-combo-btn {
+  position: relative;
+  left: 45%;
+  background-color: #f39c12;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: white;
+  cursor: pointer;
+  margin-top: 20px;
+  transition: background-color 0.3s ease;
+}
+.sLink{
+  color: #000;
+  text-decoration: none;
+}
+.show-combo-btn:hover {
+  background-color: #e67e22;
+}
+
 
 .video-section video {
   width: 100%;
@@ -14,7 +34,6 @@
   object-fit: cover;
 }
 
-/* Home text styling */
 .home-text {
   position: absolute;
   top: 50%;
@@ -57,10 +76,9 @@
 .offerposter{
   width: 100%;
 }
-.offerposter img{
-  margin-top: 17px;
+.offerposter .poster{
   width: 100%;
-  height: 80vh;
+  height: 100vh;
 }
 /* Footer section styling */
 .footer-section {
@@ -74,14 +92,13 @@
 .offers {
   background: rgb(206, 151, 79); /* Gradient background */
   color: #fff;
-  padding: 10px;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   margin: 20px auto;
   max-width: 100%;
   overflow: hidden;
   position: absolute;
-  top: 35px;
+  top: 40px;
   z-index: 10;
 }
 
@@ -98,6 +115,7 @@
   color: #fff;
   font-weight: bold;
   animation: scroll 25s linear infinite;
+  text-align: center;
 }
 
 .highlight {
@@ -224,8 +242,7 @@
     width: 100%;
     height: 40vh;
   }
-  .offerposter img{
-    margin-top: 15px;
+  .offerposter .poster{
     width: 100%;
     height: 40vh;
   }
