--- a/frontend/src/pages/Navbar.css
+++ b/frontend/src/pages/Navbar.css
@@ -7,11 +7,12 @@
   box-sizing: border-box;
 }
 .navbar {
+  width: 100%;
+  height: 8vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #2f2e1a;
-  padding: 15px 20px;
   position: relative;
   z-index: 1000;
 }
@@ -130,7 +131,41 @@
 .loginbtn:hover {
   background-color: #d35400;
 }
+.search-bar {
+  position: relative;
+  margin-top: 10px;
+}
 
+.search-bar input {
+  padding: 8px;
+  width: 200px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.search-suggestions {
+  position: absolute;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-top: none;
+  width: 200px;
+  max-height: 150px;
+  overflow-y: auto;
+  z-index: 10;
+}
+
+.suggestion-item {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #f9f9f9;
+}
+
+.suggestion-item:hover {
+  background-color: #e0e0e0;
+}
+#search{
+  color: #ccc;
+}
 /* Media query for responsive design */
 @media (max-width: 768px) {
   .hamburger {
@@ -177,7 +212,7 @@
     height: auto;
   }
   .navbar {
-    padding: 20px 20px;
+    padding: 30px 20px;
   }
   .navbar-container {
     display: flex;
@@ -196,7 +231,9 @@
     display: block;
     order: 1;
   }
-
+  #search{
+    display: none;
+  }
   .logo {
     order: 2;
     flex: 1;
@@ -213,8 +250,12 @@
   .navbar .logo img {
     width: 180px;
     height: 20vh;
-    left: 15%;
+    left: 25%;
     margin-top: -2.4vh;
+  }
+  Link{
+    color: #ccc;
+    text-decoration: none;
   }
   .links {
     display: none;
@@ -262,5 +303,8 @@
   .link {
     padding: 10px 20px;
     color: #000;
+  }
+  .loginbtn{
+    padding: 7px 7px;
   }
 }
