--- a/frontend/src/pages/Product.css
+++ b/frontend/src/pages/Product.css
@@ -8,6 +8,7 @@
 }
 
 .products-page h2 {
+  font-family: ui-sans-serif;
   text-align: center;
   font-size: 2.5em;
   color: #333;
@@ -18,7 +19,7 @@
 .products-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  gap: 10px;
 }
 
 .product-card {
@@ -72,7 +73,7 @@ align-items: center;
 .view-product-button {
   display: flex;
   text-align: center;
-  background-color: #333;
+  background-color: #ff4500;
   color: #fff;
   padding: 10px 20px;
   border: none;
