--- a/frontend/src/pages/Productshow.css
+++ b/frontend/src/pages/Productshow.css
@@ -1,4 +1,3 @@
-
 .product-detail {
   width: 100vw;
   height: auto;
@@ -10,7 +9,9 @@
   box-sizing: border-box;
   font-family: Helvetica, Georgia;
 }
-
+.description .diff{
+  font-weight: bold;
+}
 .product-images {
   display: flex;
   flex-direction: column;
@@ -180,6 +181,33 @@
   color: #fff;
   font-weight: bold;
 }
+.quantity-control {
+  display: flex;
+  align-items: start;
+  justify-content: start;
+}
+
+.btn-quantity {
+  width: 30px;
+  height: 30px;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: #f0f0f0;
+  border: 1px solid #ddd;
+  cursor: pointer;
+}
+
+.btn-quantity:hover {
+  background-color: #ddd;
+}
+
+.quantity-display {
+  margin: 0 10px;
+  font-size: 18px;
+  min-width: 30px;
+  text-align: center;
+}
+
 @keyframes spinner {
   0% {
     transform: rotate(0deg);
