--- a/frontend/src/pages/Product.css
+++ b/frontend/src/pages/Product.css
@@ -7,18 +7,25 @@
   font-family: Helvetica, Georgia;
 }
 .icon{
-  width: 100px;
-  height: 100px;
+  width: 85px;
+  height: 85px;
 }
 .head{
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.head h2 {
+  font-family: ui-sans-serif;
+  text-align: center;
+  font-size: 25px;
+  color: #333;
+  margin: 0;
+}
 .products-page h2 {
   font-family: ui-sans-serif;
   text-align: center;
-  font-size: 2.5em;
+  font-size: 30px;
   color: #333;
 }
 .products-page p {
